update name in composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mailersend/mailersend2.0",
+  "name": "mailersend2.0/mailersend2.0",
   "description": "MailerSend PHP SDK",
   "type": "library",
   "license": "MIT",
