change name of package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mailersend2.0/mailersend2.0",
+  "name": "mailersend_yasir/mailersend_yasir",
   "description": "MailerSend PHP SDK",
   "type": "library",
   "license": "MIT",
