--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,15 @@
   ],
   "require": {
     "ext-json": "*",
-    "php": "^7.4|^8.0",
+    "php": "^7.4|^8.0.2",
     "php-http/client-common": "^2.2",
     "php-http/discovery": "^1.9",
     "php-http/httplug": "^2.1",
     "psr/http-client-implementation": "^1.0",
     "psr/http-message": "^1.0",
     "tightenco/collect": "^7.0|^8.0",
-    "beberlei/assert": "^3.2"
+    "beberlei/assert": "^3.2",
+    "symfony/symfony": "5.4.16"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5.15 || ^8.4 || ^9.0",
